// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with pageTitle 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 14px;
  margin-bottom: 24px;
}

.emotion-0 * {
  color: #5D6C74;
}

.emotion-0>p {
  margin-top: 0;
  min-height: 24px;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #007CAD;
  cursor: pointer;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
}

.emotion-2:focus {
  outline: none;
}

.emotion-3 {
  background-repeat: repeat-x;
  background-size: 2px 2px;
  background-position: center bottom;
}

[data-leafygreen-ui="anchor-container"]:hover .emotion-3 {
  background-image: linear-gradient( #E7EEEC 100%, #E7EEEC 0 );
}

[data-leafygreen-ui="anchor-container"]:focus .emotion-3 {
  background-image: linear-gradient( to right, #9DD0E7 100%, #9DD0E7 0 );
}

.emotion-3 {
  background-repeat: repeat-x;
  background-size: 2px 2px;
  background-position: center bottom;
}

[data-leafygreen-ui="anchor-container"]:hover .emotion-3 {
  background-image: linear-gradient( #E7EEEC 100%, #E7EEEC 0 );
}

[data-leafygreen-ui="anchor-container"]:focus .emotion-3 {
  background-image: linear-gradient( to right, #9DD0E7 100%, #9DD0E7 0 );
}

.emotion-4 {
  cursor: default;
}

.emotion-4:last-of-type {
  color: #21313C;
}

.emotion-6:last-of-type {
  color: #21313C;
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6:hover:not(:last-of-type),
.emotion-6:focus:not(:last-of-type) {
  color: #21313C;
}

<nav
    class="emotion-0 emotion-1"
  >
    <p>
      <a
        class="emotion-2"
        data-leafygreen-ui="anchor-container"
        href="https://localhost/"
        target="_self"
      >
        <span
          class="emotion-3"
        >
          Docs Home
        </span>
      </a>
      <span
        class="emotion-4 emotion-5"
      >
         → 
      </span>
      <a
        class="emotion-6 emotion-7"
        href="/view-analyze/"
      >
        View & Analyze Data
      </a>
    </p>
  </nav>
</DocumentFragment>
`;

exports[`renders correctly with siteTitle 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 14px;
  margin-bottom: 24px;
}

.emotion-0 * {
  color: #5D6C74;
}

.emotion-0>p {
  margin-top: 0;
  min-height: 24px;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #007CAD;
  cursor: pointer;
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
}

.emotion-2:focus {
  outline: none;
}

.emotion-3 {
  background-repeat: repeat-x;
  background-size: 2px 2px;
  background-position: center bottom;
}

[data-leafygreen-ui="anchor-container"]:hover .emotion-3 {
  background-image: linear-gradient( #E7EEEC 100%, #E7EEEC 0 );
}

[data-leafygreen-ui="anchor-container"]:focus .emotion-3 {
  background-image: linear-gradient( to right, #9DD0E7 100%, #9DD0E7 0 );
}

.emotion-3 {
  background-repeat: repeat-x;
  background-size: 2px 2px;
  background-position: center bottom;
}

[data-leafygreen-ui="anchor-container"]:hover .emotion-3 {
  background-image: linear-gradient( #E7EEEC 100%, #E7EEEC 0 );
}

[data-leafygreen-ui="anchor-container"]:focus .emotion-3 {
  background-image: linear-gradient( to right, #9DD0E7 100%, #9DD0E7 0 );
}

.emotion-4 {
  cursor: default;
}

.emotion-4:last-of-type {
  color: #21313C;
}

.emotion-6:last-of-type {
  color: #21313C;
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6:hover:not(:last-of-type),
.emotion-6:focus:not(:last-of-type) {
  color: #21313C;
}

<nav
    class="emotion-0 emotion-1"
  >
    <p>
      <a
        class="emotion-2"
        data-leafygreen-ui="anchor-container"
        href="https://localhost/"
        target="_self"
      >
        <span
          class="emotion-3"
        >
          Docs Home
        </span>
      </a>
      <span
        class="emotion-4 emotion-5"
      >
         → 
      </span>
      <a
        class="emotion-6 emotion-7"
        href="/"
      >
        MongoDB Compass
      </a>
    </p>
  </nav>
</DocumentFragment>
`;
